# glossanea

./: .gitignore  MANIFEST.in  README.md  glossanea.py  requirements-dev.txt  requirements.txt  run-cli.bat  run-cli.ps1  run.bat  run.ps1  setup.cfg  woyo.py
cli/: cli.py  day.py  output.py  user_input.py  weekly_review.py
gui/: gui.py
src/glossanea/: __init__.py  __main__.py  version.py
src/glossanea/cli/: __init__.py  cli.py  cli_unit.py  day.py  output.py  unit.py  user_input.py  weekly_review.py
src/glossanea/config/: __init__.py  app.py  logging.py
src/glossanea/data/: logger.ini
src/glossanea/files/: config.py  data.py
src/glossanea/gui/: __init__.py  gui.py
src/glossanea/structure/: __init__.py  config.py  cycle.py  data.py  data_version.py  day.py  exceptions.py  schema.py  unit.py  user_interface.py  weekly_review.py
src/glossanea/tasks/: __init__.py  _common.py  c_1_title.py  c_2_intro_text.py  definitions.py  intro_text.py  matching.py  new_words.py  new_words_common.py  other_new_words.py  sample_sentences.py  t_1_new_words.py  t_1_new_words_common.py  t_2_sample_sentences.py  t_3_definitions.py  t_4_matching.py  t_5_other_new_words.py  title.py  wr_01_before_the_test.py  wr_02_definitions.py  wr_03_word_combinations.py  wr_04_skeletons.py  wr_05_substitution.py  wr_06_translation.py  wr_07_sit_back_and_relax.py  wr_08_word_formation.py  wr_09_usage.py  (+2 more)
structure/: cycle.py  day.py  unit.py  user_interface.py  weekly_review.py
utils/: convert_data_v1_to_v2.py  data_file_loader.py
z-run-scripts/: run-cli.bat  run-cli.ps1  run.bat
(+3 files in other folders)
