[metadata]
name = glossanea
version = attr: glossanea.version.__version__
url = https://github.com/sunarch/glossanea
project_urls =
    Bug Tracker = https://github.com/sunarch/glossanea/issues
author = András Németh (sunarch)
author_email = sunarch@protonmail.com
maintainer = András Németh (sunarch)
maintainer_email = sunarch@protonmail.com
classifiers =
    Programming Language :: Python :: 3
    Natural Language :: English
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: X11 Applications
    Environment :: Win32 (MS Windows)
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Topic :: Education
    Topic :: Education :: Testing
    Typing :: Typed
license = Mozilla Public License 2.0 (MPL 2.0)
description = glossanea - a program to help learning languages
long_description = file: README.md
long_description_content_type = text/markdown
keywords = glossanea, language, learn
platforms = Any

[options]
install_requires = file: requirements.txt
python_requires = >=3.9
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    glossanea = glossanea.__main__:main

[options.packages.find]
where = src
